WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104861
Don't dispatch fake mousemove events when we don't know where the cursor is
https://bugs.webkit.org/show_bug.cgi?id=104861
Summary
Don't dispatch fake mousemove events when we don't know where the cursor is
Andy Estes
Reported
2012-12-12 16:39:32 PST
Don't dispatch fake mousemove events when we don't know where the cursor is
Attachments
Patch
(22.44 KB, patch)
2012-12-12 16:58 PST
,
Andy Estes
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2012-12-12 16:58:12 PST
Created
attachment 179153
[details]
Patch
Andy Estes
Comment 2
2012-12-12 17:05:34 PST
Committed
r137539
: <
http://trac.webkit.org/changeset/137539
>
Alexander Pavlov (apavlov)
Comment 3
2012-12-29 00:01:16 PST
***
Bug 98016
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug